--- a/www/HTMLCSS/Seminarski/style.css
+++ b/www/HTMLCSS/Seminarski/style.css
@@ -1,25 +1,54 @@
+* {
+    box-sizing: border-box;
+  }
+
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
+
+[class*="col-"] {
+    float: left;
+    padding: 15px;
+    
+  }
+
 #main {
     margin-left: 0;
     margin-top: 0;
     margin-right: 0;
 }
 
+#header {
+    min-height: 40px;
+    background-color: black;
+   }
+
+.title > span:nth-child(1) {
+    margin-left: 350px;
+   }
+   
+   
+
 .navigation, .nav-list {
     background-color: #3669c9;
     margin-top: 0px;
-    text-align: center;
+    
 }
 
 #header > h1 {
-    background-color: black;
+    margin-left: 350px;
     color: white;
     margin: 0px;
-    text-align: center;
-}
-
-#header > h1 > span {
-    position: relative;
-    left: -20em;
+    
 }
 
 a {
@@ -38,23 +67,15 @@ ul {
 }
 
 .home {
-    margin-bottom: 0px;
-    position: relative;
-    width: fit-content;
-    padding-top: 2.5px;
-    
-    text-align: match-parent;
-    float: left;
+    display: inline;
+}
+
+.menu-item-home {
+    display: inline;
 }
 
 .menu-item-about {
-    position: relative;
-    text-align: left;
-    top: -2em;
-    width: fit-content;
-    
-    left: 4em;
-    height: fit-content;
+   display: inline;
             
 }
 
@@ -69,76 +90,21 @@ ul {
 }
 
 .menu-item-contact {
-    position: relative;
-    text-align: left;
-    top: -4.3em;
-    width: fit-content;
-    height: fit-content;
-    
-    left: 10em;            
+   display: inline;          
 }
 
 .nav-list {
-    height: 40px;
+    height: 50px;
 }
 
-.p1 {
-    border: solid;
-    width: 500px;
-    height: 500px;
-    margin-left: 10px;
-    padding: 5px;
-    border-radius: 5px;
-    position: relative;
-    top: 10em;
-}
-
-.p2 {
-    border: solid;
-    width: 500px;
-    height: 500px;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 5px;
-    border-radius: 5px;
-    position: relative;
-    top: -355px;
-}
-
-.p3 {
-    border: solid;
-    width: 500px;
-    height: 500px;
-    margin-left: auto;
-    padding: 5px;
-    border-radius: 5px;
-    position: relative;
-    top: -870px;
-    margin-right: 1em;
-}
 
 .img1 {
-    position: relative;
-    left: 3em;
-    margin-left: auto;
-    margin-right: auto;
+    max-width: 400px;
+    width: 100%;
+    display: block;
+    margin: 0 auto;
 }
 
-/*
-.consent {
-    
-    text-align: center;
-    border: solid;
-    position: fixed;
-    width: 500px;
-    height: 200px;
-    top: 50%;
-    left: 50%;
-    margin-top: -100px; /* Negative half of height. 
-    margin-left: -250px; /* Negative half of width. 
-    font-family: Arial, Helvetica, sans-serif;
-}
-*/
 
 #header-nav {
 	
@@ -159,3 +125,24 @@ ul {
 #main {
     background-image: url(slike/PIA12348~orig.jpg);
 }
+
+#con_top {
+    background-color: white;
+}
+
+#spacer {
+    min-height: 200px;
+}
+
+.home > img:nth-child(1) {
+    display: inline;
+    top: 5px;
+    position: relative;
+   }
+   
+.menu-item-about > a > span {
+    font-size: 2em;
+    font-family: sans-serif;
+    margin: 20px;
+}
+
