--- a/www/HTMLCSS/Seminarski/style.css
+++ b/www/HTMLCSS/Seminarski/style.css
@@ -21,6 +21,9 @@
     
   }
 
+@media (min-width: 800px){
+    
+
 #main {
     margin-left: 0;
     margin-top: 0;
@@ -118,7 +121,7 @@ ul {
 	width: 70%;
 	margin-left: auto;
 	margin-right: auto;
-    background-color: white;
+    
     
 }
 
@@ -127,7 +130,7 @@ ul {
 }
 
 #con_top {
-    background-color: white;
+    min-height: 500px;
 }
 
 #spacer {
@@ -145,4 +148,33 @@ ul {
     font-family: sans-serif;
     margin: 20px;
 }
+.conbox {
+    background-color: white;
+    padding: 15px;
+    border-radius: 25px;
+}
 
+.conbox1{
+    min-height: 550px;
+    
+}
+
+.img_mid{
+    display: inline;
+    width: 33%;
+    padding: 15px;
+}
+
+#img_mid {
+    width: fit-content;
+    margin: 0 auto;
+}
+
+}
+
+@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    [class*="col-"] {
+      width: 100%;
+    }
+  }
