--- a/www/HTMLCSS/Seminarski/style.css
+++ b/www/HTMLCSS/Seminarski/style.css
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    font-family: 'Dosis', sans-serif;
   }
 
 html, body {
@@ -97,6 +98,61 @@ padding: 15px;
     width: 100%;
 }
 
+.title > span:nth-child(1) {
+    font-family: initial;
+   }
+
+.contact {
+    min-height: 300px;
+}
+
+.cont_ico {
+    position: absolute;
+    padding: 100px 0;
+    right: 20px;
+}
+
+.cont_ico2 {
+    position: absolute;
+    padding: 100px 0;
+    left: 20px;
+}
+
+.contact_1 {
+    float: left;
+    clear: both;
+    margin-bottom: 15px;
+}
+
+form {
+    width: 50%;
+    margin: 0 auto;
+}
+
+textarea.contact_1 {
+    resize: none;
+    width: 100%;
+   }
+
+    .conbox > hr:nth-child(4) {
+    clear: both;
+  }
+a.fa:nth-child(5) {
+    color: black;
+  }
+a.fa:nth-child(6) {
+    color: black;
+  }
+a.fa:nth-child(7) {
+    color: black;
+  }
+.conbox > a:nth-child(8) {
+    color: black;
+    float: right;
+  }
+  
+   
+
 
 @media (min-width: 800px){
 
@@ -128,7 +184,7 @@ padding: 15px;
 #navscroll {
     position: fixed;
     background-color: #333;
-    width: 380px;
+    width: 10%;
     padding: 15px;
     right: 0;
 }
@@ -137,6 +193,11 @@ padding: 15px;
     display: block;
     margin-bottom: 25px;
 }
+
+a.navscroll_el:nth-child(3) {
+    margin-bottom: 0px;
+   }
+   
 
 #header {
     min-height: 40px;
@@ -232,6 +293,7 @@ ul {
 p {
     max-height: 300px;
     overflow: auto;
+    
 }
 
 
