--- a/www/HTMLCSS/Seminarski/style.css
+++ b/www/HTMLCSS/Seminarski/style.css
@@ -427,6 +427,15 @@ p {
     margin: 0 auto;
 }
 
+
+#q > img:nth-child(1) {
+    position: fixed;
+    right: 20px;
+    background-color: black;
+    border-radius: 5px;
+    padding: 8px;
+   }
+   
 }
 
 @media only screen and (max-width: 768px) {
