--- a/www/HTMLCSS/Seminarski/style.css
+++ b/www/HTMLCSS/Seminarski/style.css
@@ -448,6 +448,46 @@ p {
    
 }
 
+/* ##### RULES v0.8 ####### */
+
+.flexcon {
+    margin: 10px;
+    background-color: white;
+    border-radius: 25px;
+    max-width: 490px;
+}
+
+.flexban {
+    background-color: white;
+    border-radius: 25px;
+    background-image: url(../Seminarski/slike/s1.jpg);
+    
+    background-size: 250px;
+    width: 100%;
+    min-height: 250px;   
+}
+
+.banner1{
+    width: 250px;
+    padding: 5px;
+    background-color: #666;
+    color: white;
+    text-align: center;
+    
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+.strike {
+    text-decoration: line-through;
+}
+
+.bprice {
+    color: red;
+    font-weight: bold;
+    font-size: 1.8em;
+}
+
+
 @media only screen and (max-width: 768px) {
 
     #navscroll {
