--- a/www/HTMLCSS/Seminarski/style.css
+++ b/www/HTMLCSS/Seminarski/style.css
@@ -10,6 +10,7 @@
     font-family: 'Dosis', sans-serif;
   }
 
+
 .bg-mymenu {
     background-color: #c6d8fa !important;
 }
@@ -84,6 +85,7 @@ html, body {
 
 .footer-links {
     text-decoration: none;
+    color: white;
 }
 
 .button {
@@ -264,6 +266,7 @@ a.fa:nth-child(7) {
 .navscroll_el {
     display: block;
     margin-bottom: 25px;
+    color: white;
 }
 
 a.navscroll_el:nth-child(3) {
@@ -296,7 +299,7 @@ a.navscroll_el:nth-child(3) {
 }
 
 a {
-    color: white;
+    color: white; 
     text-decoration: none;
 }
 
@@ -530,8 +533,8 @@ p {
     }
     
     a {
-        color: white;
-        text-decoration: none;
+        color: white !important;
+        text-decoration: none !important;
     }
     
     a:hover {
