Added: Priprema 7,8,9 HTML & Python 10

--- a/www/HTMLCSS/Seminarski/style.css
+++ b/www/HTMLCSS/Seminarski/style.css
@@ -463,7 +463,7 @@ p {
 .flexban {
     background-color: white;
     border-radius: 25px;
-    background-image: url(../Seminarski/slike/s1.jpg);
+    background-image: url(slike/s1.jpg);
     
     background-size: 250px;
     width: 100%;
